-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0
-
None
-
Windows 7 (64 bit), Lenovo R500 laptop
After calling updateConfigurations(), the updateCompleted() signal is never emitted.
Debugging shows the callback is received from the generic plugin but not the nativewifi plugin.
Test case: tst_qnetworkconfigurationmanager::allConfigurations
Test fails even if the timeout is increased to 3 minutes.
Test passes if wifi is switched off, or if run on a desktop PC with no wifi adaptor.
Note that the initial update during construction is successful.
- relates to
-
QTBUG-21570 QNetworkConfigurationManager::allConfigurations() always returns empty list o, Windows 7
-
- Closed
-
-
QTBUG-20501 QNetworkConfigurationManager::isOnline() fails on Windows
-
- Closed
-
For Gerrit Dashboard: QTBUG-24503 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
25295,1 | Windows 7 - fix nativewifi bearer plugin | master | qt/qtbase | Status: MERGED | +2 | 0 |
25620,1 | Windows 7 - fix nativewifi bearer plugin | 4.8 | qt/qt | Status: MERGED | +2 | 0 |